--- a/index.html
+++ b/index.html
@@ -1,128 +1,74 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="zh-TW">
 <head>
-<meta charset="UTF-8">
-<title>玻璃紙顏色對光電板吸收效率</title>
-
-<style>
-body {
-  margin:0;
-  background:#020617;
-  color:#e5e7eb;
-  font-family: system-ui, sans-serif;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  height:100vh;
-}
-
-#content {
-  max-width:900px;
-  text-align:center;
-  opacity:0;
-  transition:opacity 1s;
-}
-
-h1 { color:#38bdf8; }
-p { font-size:1.1rem; line-height:1.8; }
-</style>
+  <meta charset="UTF-8">
+  <title>程式設計與物理學專題</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<div id="content"></div>
+<div id="scene">
 
-<script>
-// ====== PDF 對應的時間線 ======
-const timeline = [
-  {
-    duration: 10,
-    html: `
-      <h1>玻璃紙顏色對光電板吸收效率</h1>
-      <p>Programming × Physics<br>林俐陽・蘇祈瑞</p>
-    `,
-    speech: "本研究結合程式設計與物理學，探討玻璃紙顏色對光電板吸收效率的影響。"
-  },
-  {
-    duration: 15,
-    html: `
-      <h1>研究動機</h1>
-      <p>土地資源有限，是否能透過控制波長提升效率？</p>
-    `,
-    speech: "由於台灣土地資源有限，我們思考是否能透過限制特定波長的光線，在不增加用地的情況下，改變光電板的發電效率。"
-  },
-  {
-    duration: 18,
-    html: `
-      <h1>光源選擇</h1>
-      <p>白日燈 × SpectraSmart</p>
-    `,
-    speech: "本實驗並未使用太陽光，而是選擇白日燈作為穩定光源，並透過 SpectraSmart 量測其發光強度與光譜分布。"
-  },
-  {
-    duration: 18,
-    html: `
-      <h1>模擬實驗</h1>
-      <p>JavaScript 即時互動模擬</p>
-      <p><a href="https://handsome265.github.io/hi/" target="_blank">模擬實驗網站</a></p>
-    `,
-    speech: "我們使用 JavaScript 建立互動式模擬系統，即時觀察不同顏色玻璃紙對光線吸收的影響。"
-  },
-  {
-    duration: 20,
-    html: `
-      <h1>實驗數據分析</h1>
-      <p><a href="https://handsome265.github.io/ok/" target="_blank">分析圖表網站</a></p>
-    `,
-    speech: "接著，我們將實際實驗數據轉換為圖表，分析不同顏色玻璃紙下的光電板輸出效率。"
-  },
-  {
-    duration: 18,
-    html: `
-      <h1>結論</h1>
-      <p>模擬與實驗趨勢一致</p>
-    `,
-    speech: "結果顯示，模擬與實驗在整體趨勢上相當一致，光線衰減行為大致符合比爾朗伯定律。"
-  }
-];
+  <!-- 第 1 段：開場 -->
+  <div class="slide active">
+    <h1>程式設計與物理學</h1>
+    <p>
+      各位老師、同學大家好，我是林俐陽和蘇祈瑞。<br>
+      今天要為大家報告：玻璃紙顏色對光電板吸收效率的影響。
+    </p>
+  </div>
 
-// ====== 語音設定 ======
-function speak(text) {
-  speechSynthesis.cancel();
-  const utter = new SpeechSynthesisUtterance(text);
-  utter.lang = "zh-TW";
+  <!-- 第 2 段：研究動機 -->
+  <div class="slide">
+    <h1>研究動機</h1>
+    <p>
+      台灣地區土地資源相當狹窄，太陽能光電板往往需要占用大量空間。
+      我們思考是否能透過限制特定波長的光線，
+      在不增加用地的情況下提升發電效率。
+    </p>
+  </div>
 
-  const voices = speechSynthesis.getVoices();
-  const male = voices.find(v => v.name.includes("YunJhe"));
-  if (male) utter.voice = male;
+  <!-- 第 3 段：程式與物理 -->
+  <div class="slide">
+    <h1>程式設計與物理模型</h1>
+    <p>
+      本研究使用 HTML、CSS、JavaScript 與 DOM
+      建立互動式模擬實驗平台，
+      並搭配菲涅爾公式與比爾朗伯公式進行物理計算。
+    </p>
+  </div>
 
-  speechSynthesis.speak(utter);
-}
+  <!-- 第 4 段：模擬與實驗 -->
+  <div class="slide">
+    <h1>模擬實驗與真實實驗</h1>
+    <p>
+      模擬實驗網站：
+      <br>
+      <a href="https://handsome265.github.io/hi/" target="_blank">
+        https://handsome265.github.io/hi/
+      </a>
+    </p>
+    <p>
+      實驗分析圖表：
+      <br>
+      <a href="https://handsome265.github.io/ok/" target="_blank">
+        https://handsome265.github.io/ok/
+      </a>
+    </p>
+  </div>
 
-// ====== 播放時間線 ======
-const content = document.getElementById("content");
-let index = 0;
+  <!-- 第 5 段：結論 -->
+  <div class="slide">
+    <h1>結論與未來展望</h1>
+    <p>
+      本實驗顯示模擬結果與實驗結果高度一致。
+      未來可進一步整合人工智慧、雲端平台、
+      產學合作與國際資料庫，拓展研究價值。
+    </p>
+  </div>
 
-function playNext() {
-  if (index >= timeline.length) return;
+</div>
 
-  const slide = timeline[index];
-  content.style.opacity = 0;
-
-  setTimeout(() => {
-    content.innerHTML = slide.html;
-    content.style.opacity = 1;
-    speak(slide.speech);
-    index++;
-    setTimeout(playNext, slide.duration * 1000);
-  }, 1000);
-}
-
-// 使用者互動後啟動（瀏覽器限制）
-document.body.addEventListener("click", () => {
-  if (index === 0) playNext();
-}, { once:true });
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
