Refactor text for clarity and conciseness

--- a/index.html
+++ b/index.html
@@ -7,63 +7,58 @@
 </head>
 <body>
 
+<!-- 播放遮罩（像影片的 Play） -->
+<div id="startScreen">
+  <button id="startBtn">▶ 開始播放</button>
+</div>
+
 <div id="scene">
 
-  <!-- 第 1 段：開場 -->
-  <div class="slide active">
+  <div class="slide">
     <h1>程式設計與物理學</h1>
     <p>
       各位老師、同學大家好，我是林俐陽和蘇祈瑞。<br>
-      今天要為大家報告：玻璃紙顏色對光電板吸收效率的影響。
+      今天要為大家報告玻璃紙顏色對光電板吸收效率的影響。
     </p>
   </div>
 
-  <!-- 第 2 段：研究動機 -->
   <div class="slide">
     <h1>研究動機</h1>
     <p>
-      台灣地區土地資源相當狹窄，太陽能光電板往往需要占用大量空間。
-      我們思考是否能透過限制特定波長的光線，
-      在不增加用地的情況下提升發電效率。
+      台灣地區土地資源狹窄，太陽能板需要大量空間，
+      我們思考是否能透過控制波長來提升效率。
     </p>
   </div>
 
-  <!-- 第 3 段：程式與物理 -->
   <div class="slide">
     <h1>程式設計與物理模型</h1>
     <p>
-      本研究使用 HTML、CSS、JavaScript 與 DOM
-      建立互動式模擬實驗平台，
-      並搭配菲涅爾公式與比爾朗伯公式進行物理計算。
+      使用 HTML、CSS、JavaScript 與物理公式
+      建立互動式光學模擬系統。
     </p>
   </div>
 
-  <!-- 第 4 段：模擬與實驗 -->
   <div class="slide">
-    <h1>模擬實驗與真實實驗</h1>
+    <h1>模擬與實驗平台</h1>
     <p>
-      模擬實驗網站：
-      <br>
+      模擬實驗：
       <a href="https://handsome265.github.io/hi/" target="_blank">
-        https://handsome265.github.io/hi/
+        handsome265.github.io/hi
       </a>
     </p>
     <p>
-      實驗分析圖表：
-      <br>
+      分析圖表：
       <a href="https://handsome265.github.io/ok/" target="_blank">
-        https://handsome265.github.io/ok/
+        handsome265.github.io/ok
       </a>
     </p>
   </div>
 
-  <!-- 第 5 段：結論 -->
   <div class="slide">
     <h1>結論與未來展望</h1>
     <p>
-      本實驗顯示模擬結果與實驗結果高度一致。
-      未來可進一步整合人工智慧、雲端平台、
-      產學合作與國際資料庫，拓展研究價值。
+      模擬與實驗結果高度一致，
+      未來可整合 AI、雲端與國際資料庫。
     </p>
   </div>
 
