--- a/index.html
+++ b/index.html
@@ -7,59 +7,38 @@
 </head>
 <body>
 
-<!-- 播放遮罩（像影片的 Play） -->
 <div id="startScreen">
   <button id="startBtn">▶ 開始播放</button>
 </div>
 
 <div id="scene">
 
-  <div class="slide">
+  <div class="slide active">
     <h1>程式設計與物理學</h1>
-    <p>
-      各位老師、同學大家好，我是林俐陽和蘇祈瑞。<br>
-      今天要為大家報告玻璃紙顏色對光電板吸收效率的影響。
-    </p>
+    <p>各位老師、同學大家好，我們要報告玻璃紙顏色對光電板吸收效率的影響。</p>
   </div>
 
   <div class="slide">
     <h1>研究動機</h1>
-    <p>
-      台灣地區土地資源狹窄，太陽能板需要大量空間，
-      我們思考是否能透過控制波長來提升效率。
-    </p>
+    <p>台灣地區土地資源狹窄，因此思考如何在不增加用地的情況下提升效率。</p>
   </div>
 
   <div class="slide">
     <h1>程式設計與物理模型</h1>
-    <p>
-      使用 HTML、CSS、JavaScript 與物理公式
-      建立互動式光學模擬系統。
-    </p>
+    <p>使用 HTML、CSS、JavaScript 與菲涅爾、比爾朗伯公式進行模擬。</p>
   </div>
 
   <div class="slide">
     <h1>模擬與實驗平台</h1>
     <p>
-      模擬實驗：
-      <a href="https://handsome265.github.io/hi/" target="_blank">
-        handsome265.github.io/hi
-      </a>
-    </p>
-    <p>
-      分析圖表：
-      <a href="https://handsome265.github.io/ok/" target="_blank">
-        handsome265.github.io/ok
-      </a>
+      <a href="https://handsome265.github.io/hi/" target="_blank">模擬實驗</a><br>
+      <a href="https://handsome265.github.io/ok/" target="_blank">分析圖表</a>
     </p>
   </div>
 
   <div class="slide">
     <h1>結論與未來展望</h1>
-    <p>
-      模擬與實驗結果高度一致，
-      未來可整合 AI、雲端與國際資料庫。
-    </p>
+    <p>模擬與實驗結果高度一致，未來可整合 AI 與雲端研究。</p>
   </div>
 
 </div>
