--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
-  <title>程式設計與物理學專題</title>
+  <title>專題簡報</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,36 +11,8 @@
   <button id="startBtn">▶ 開始播放</button>
 </div>
 
-<div id="scene">
-
-  <div class="slide active">
-    <h1>程式設計與物理學</h1>
-    <p>各位老師、同學大家好，我們要報告玻璃紙顏色對光電板吸收效率的影響。</p>
-  </div>
-
-  <div class="slide">
-    <h1>研究動機</h1>
-    <p>台灣地區土地資源狹窄，因此思考如何在不增加用地的情況下提升效率。</p>
-  </div>
-
-  <div class="slide">
-    <h1>程式設計與物理模型</h1>
-    <p>使用 HTML、CSS、JavaScript 與菲涅爾、比爾朗伯公式進行模擬。</p>
-  </div>
-
-  <div class="slide">
-    <h1>模擬與實驗平台</h1>
-    <p>
-      <a href="https://handsome265.github.io/hi/" target="_blank">模擬實驗</a><br>
-      <a href="https://handsome265.github.io/ok/" target="_blank">分析圖表</a>
-    </p>
-  </div>
-
-  <div class="slide">
-    <h1>結論與未來展望</h1>
-    <p>模擬與實驗結果高度一致，未來可整合 AI 與雲端研究。</p>
-  </div>
-
+<div id="viewer">
+  <img id="slideImg" src="images/page1.jpg">
 </div>
 
 <script src="script.js"></script>
