--- a/index.html
+++ b/index.html
@@ -5,114 +5,89 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>報告 + 模擬實驗</title>
 <link rel="stylesheet" href="style.css">
+<!-- Chart.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 <style>
-body {
-    margin: 0;
-    padding: 20px;
-    font-family: 'Segoe UI', sans-serif;
-    background: #000;
-    color: #fff;
-}
-#viewer {
-    text-align: center;
-    margin-bottom: 50px;
-}
-#slideImg {
-    max-width: 90%;
-    height: auto;
-    border: 3px solid #00ff88;
-    border-radius: 10px;
-}
-#startScreen {
-    text-align: center;
-    margin-top: 20px;
-}
-#simulationWrapper {
-    margin-top: 200px; /* 讓使用者需要滾輪下滑才能看到 */
-}
-.container {
-    display: grid;
-    grid-template-columns: 400px 1fr;
-    gap: 20px;
-    max-width: 1600px;
-    margin: 0 auto;
-}
-.control-panel {
-    background: linear-gradient(135deg,#1a1a2e,#16213e);
-    padding: 20px;
-    border-radius: 15px;
-    border: 2px solid #00ff88;
-}
-.control-group {
-    margin-bottom: 25px;
-    background: rgba(0,255,136,0.1);
-    padding: 15px;
-    border-radius: 10px;
-}
-.control-group h3 {
-    color: #00ff88;
-    margin: 0 0 15px 0;
-}
-.simulation-area {
-    background: #111;
-    height: 250px;
-    border: 3px solid #00ff88;
-    border-radius: 15px;
-    position: relative;
-    overflow: hidden;
-    margin-bottom: 20px;
-}
+body { margin:0; padding:20px; font-family:'Segoe UI',sans-serif; background:#000; color:#fff; }
+#viewer { text-align:center; margin-bottom:50px; }
+#slideImg { max-width:90%; height:auto; border:3px solid #00ff88; border-radius:10px; }
+#startScreen { text-align:center; margin-bottom:50px; }
+#simulationWrapper { margin-top:100px; } /* 模擬區與幻燈片間距 */
+.container { display:grid; grid-template-columns:400px 1fr; gap:20px; max-width:1600px; margin:0 auto; }
+.control-panel { background:linear-gradient(135deg,#1a1a2e,#16213e); padding:20px; border-radius:15px; border:2px solid #00ff88; }
+.control-group { margin-bottom:25px; background:rgba(0,255,136,0.1); padding:15px; border-radius:10px; }
+.control-group h3 { color:#00ff88; margin:0 0 15px 0; }
+.simulation-area { background:#111; height:250px; border:3px solid #00ff88; border-radius:15px; position:relative; overflow:hidden; margin-bottom:20px; }
+.value-display { width:85px; text-align:right; font-size:13px; color:#00ff88; font-weight:bold; }
+.chart-container { background:#2a2a3e; border-radius:15px; padding:20px; margin-bottom:20px; }
+.stats-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:20px; margin-bottom:20px; }
+.stat-card { background:#2a2a3e; padding:15px; border-radius:10px; border:1px solid #3a3a4e; }
+.stat-card h3 { color:#00ff88; font-size:1em; margin-bottom:5px; }
+.stat-value { font-size:1.5em; font-weight:bold; }
+.stat-label { font-size:0.9em; color:#aaa; }
+table { width:100%; border-radius:10px; overflow:hidden; margin-top:10px; }
+th,td { padding:8px; text-align:center; color:#fff; }
+th { background:#00ff88; color:#000; }
+tr:nth-child(even){background:#3a3a4e;}
+.color-indicator { display:inline-block; width:15px; height:15px; border-radius:50%; margin-right:5px; vertical-align:middle; border:1px solid #555; }
 </style>
 </head>
 <body>
 
 <!-- 幻燈片區 -->
 <div id="viewer">
-    <img id="slideImg" src="images/Thank_you_page-0001.jpg">
+  <img id="slideImg" src="images/Thank_you_page-0001.jpg">
 </div>
 <div id="startScreen">
-    <button id="startBtn">▶ 開始播放</button>
+  <button id="startBtn">▶ 開始播放</button>
 </div>
 
 <!-- 下方模擬實驗區 -->
 <div id="simulationWrapper">
-    <h2 style="color:#00ff88;">模擬實驗：光電板與 LED 電流</h2>
-    <div class="container">
-        <!-- 控制面板 -->
-        <div class="control-panel">
-            <div class="control-group">
-                <h3>🎨 玻璃紙顏色</h3>
-                <select id="glassColor">
-                    <option value="clear">透明(100%)</option>
-                    <option value="lightBlue">淺藍(85%)</option>
-                    <option value="green">綠色(75%)</option>
-                    <option value="yellow">黃色(70%)</option>
-                    <option value="orange">橙色(60%)</option>
-                    <option value="red">紅色(55%)</option>
-                    <option value="darkBlue">深藍(45%)</option>
-                    <option value="purple">紫色(40%)</option>
-                    <option value="brown">棕色(35%)</option>
-                    <option value="gray">灰色(25%)</option>
-                </select>
-                <span class="value-display" id="glassColorValue">透明</span>
-            </div>
-            <div class="simulation-area" id="simulationArea"></div>
-        </div>
-
-        <!-- LED 圖表面板 -->
-        <div>
-            <canvas id="mainChart"></canvas>
-            <div id="dataTable"></div>
-        </div>
+  <h2 style="color:#00ff88;">模擬實驗：光電板與 LED 電流</h2>
+  <div class="container">
+    <!-- 控制面板 -->
+    <div class="control-panel">
+      <div class="control-group">
+        <h3>🎨 玻璃紙顏色</h3>
+        <select id="glassColor">
+          <option value="clear">透明(100%)</option>
+          <option value="lightBlue">淺藍(85%)</option>
+          <option value="green">綠色(75%)</option>
+          <option value="yellow">黃色(70%)</option>
+          <option value="orange">橙色(60%)</option>
+          <option value="red">紅色(55%)</option>
+          <option value="darkBlue">深藍(45%)</option>
+          <option value="purple">紫色(40%)</option>
+          <option value="brown">棕色(35%)</option>
+          <option value="gray">灰色(25%)</option>
+        </select>
+        <span class="value-display" id="glassColorValue">透明</span>
+      </div>
+      <div class="simulation-area" id="simulationArea"></div>
     </div>
+
+    <!-- LED 圖表面板 -->
+    <div>
+      <div class="chart-container">
+        <canvas id="mainChart"></canvas>
+      </div>
+      <div class="stats-grid">
+        <div class="stat-card"><h3>最高電流</h3><div class="stat-value" id="maxCurrent">-</div><div class="stat-label" id="maxLED">-</div></div>
+        <div class="stat-card"><h3>最低電流</h3><div class="stat-value" id="minCurrent">-</div><div class="stat-label" id="minLED">-</div></div>
+        <div class="stat-card"><h3>平均電流</h3><div class="stat-value" id="avgCurrent">-</div><div class="stat-label">6色平均</div></div>
+      </div>
+      <table>
+        <thead>
+          <tr><th>LED 顏色</th><th>波長</th><th>電流(mA)</th></tr>
+        </thead>
+        <tbody id="dataTable"></tbody>
+      </table>
+    </div>
+  </div>
 </div>
 
-<!-- Chart.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-<!-- 幻燈片播放 JS -->
-<script src="slides.js"></script>
-<!-- 模擬實驗 JS -->
-<script src="simulation.js"></script>
-
+<!-- 已有 JS -->
+<script src="script.js"></script>
 </body>
 </html>
