--- a/index.html
+++ b/index.html
@@ -7,36 +7,12 @@
 <link rel="stylesheet" href="style.css">
 <!-- Chart.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-<style>
-body { margin:0; padding:20px; font-family:'Segoe UI',sans-serif; background:#000; color:#fff; }
-#viewer { text-align:center; margin-bottom:50px; }
-#slideImg { max-width:90%; height:auto; border:3px solid #00ff88; border-radius:10px; }
-#startScreen { text-align:center; margin-bottom:50px; }
-#simulationWrapper { margin-top:100px; } /* 模擬區與幻燈片間距 */
-.container { display:grid; grid-template-columns:400px 1fr; gap:20px; max-width:1600px; margin:0 auto; }
-.control-panel { background:linear-gradient(135deg,#1a1a2e,#16213e); padding:20px; border-radius:15px; border:2px solid #00ff88; }
-.control-group { margin-bottom:25px; background:rgba(0,255,136,0.1); padding:15px; border-radius:10px; }
-.control-group h3 { color:#00ff88; margin:0 0 15px 0; }
-.simulation-area { background:#111; height:250px; border:3px solid #00ff88; border-radius:15px; position:relative; overflow:hidden; margin-bottom:20px; }
-.value-display { width:85px; text-align:right; font-size:13px; color:#00ff88; font-weight:bold; }
-.chart-container { background:#2a2a3e; border-radius:15px; padding:20px; margin-bottom:20px; }
-.stats-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:20px; margin-bottom:20px; }
-.stat-card { background:#2a2a3e; padding:15px; border-radius:10px; border:1px solid #3a3a4e; }
-.stat-card h3 { color:#00ff88; font-size:1em; margin-bottom:5px; }
-.stat-value { font-size:1.5em; font-weight:bold; }
-.stat-label { font-size:0.9em; color:#aaa; }
-table { width:100%; border-radius:10px; overflow:hidden; margin-top:10px; }
-th,td { padding:8px; text-align:center; color:#fff; }
-th { background:#00ff88; color:#000; }
-tr:nth-child(even){background:#3a3a4e;}
-.color-indicator { display:inline-block; width:15px; height:15px; border-radius:50%; margin-right:5px; vertical-align:middle; border:1px solid #555; }
-</style>
 </head>
 <body>
 
 <!-- 幻燈片區 -->
 <div id="viewer">
-  <img id="slideImg" src="images/Thank_you_page-0001.jpg">
+  <img id="slideImg" src="images/Thank_you_page-0001.jpg" alt="幻燈片">
 </div>
 <div id="startScreen">
   <button id="startBtn">▶ 開始播放</button>
@@ -87,7 +63,7 @@ tr:nth-child(even){background:#3a3a4e;}
   </div>
 </div>
 
-<!-- 已有 JS -->
+<!-- JS -->
 <script src="script.js"></script>
 </body>
 </html>
