--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>報告 + 模擬實驗</title>
 <link rel="stylesheet" href="style.css">
-<!-- Chart.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 </head>
 <body>
@@ -49,13 +48,29 @@
         <canvas id="mainChart"></canvas>
       </div>
       <div class="stats-grid">
-        <div class="stat-card"><h3>最高電流</h3><div class="stat-value" id="maxCurrent">-</div><div class="stat-label" id="maxLED">-</div></div>
-        <div class="stat-card"><h3>最低電流</h3><div class="stat-value" id="minCurrent">-</div><div class="stat-label" id="minLED">-</div></div>
-        <div class="stat-card"><h3>平均電流</h3><div class="stat-value" id="avgCurrent">-</div><div class="stat-label">6色平均</div></div>
+        <div class="stat-card">
+          <h3>最高電流</h3>
+          <div class="stat-value" id="maxCurrent">-</div>
+          <div class="stat-label" id="maxLED">-</div>
+        </div>
+        <div class="stat-card">
+          <h3>最低電流</h3>
+          <div class="stat-value" id="minCurrent">-</div>
+          <div class="stat-label" id="minLED">-</div>
+        </div>
+        <div class="stat-card">
+          <h3>平均電流</h3>
+          <div class="stat-value" id="avgCurrent">-</div>
+          <div class="stat-label">6色平均</div>
+        </div>
       </div>
       <table>
         <thead>
-          <tr><th>LED 顏色</th><th>波長</th><th>電流(mA)</th></tr>
+          <tr>
+            <th>LED 顏色</th>
+            <th>波長</th>
+            <th>電流(mA)</th>
+          </tr>
         </thead>
         <tbody id="dataTable"></tbody>
       </table>
@@ -63,7 +78,6 @@
   </div>
 </div>
 
-<!-- JS -->
 <script src="script.js"></script>
 </body>
 </html>
