--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>報告 + 模擬實驗</title>
 <link rel="stylesheet" href="style.css">
+<!-- Chart.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 </head>
 <body>
 
 <!-- 幻燈片區 -->
 <div id="viewer">
-  <img id="slideImg" src="images/Thank_you_page-0001.jpg" alt="幻燈片">
+  <img id="slideImg" src="images/Thank you_page-0001.jpg" alt="幻燈片">
 </div>
 <div id="startScreen">
   <button id="startBtn">▶ 開始播放</button>
@@ -78,6 +79,7 @@
   </div>
 </div>
 
+<!-- 你原本的 JS -->
 <script src="script.js"></script>
 </body>
 </html>
