--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!-- 幻燈片區 -->
 <div id="viewer">
-  <img id="slideImg" src="images/Thank you_page-0001.jpg" alt="幻燈片">
+  <img id="slideImg" src="images/Thank_you_page-0001.jpg" alt="幻燈片">
 </div>
 <div id="startScreen">
   <button id="startBtn">▶ 開始播放</button>
@@ -79,7 +79,6 @@
   </div>
 </div>
 
-<!-- 你原本的 JS -->
 <script src="script.js"></script>
 </body>
 </html>
