--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>報告 + 模擬實驗</title>
 <link rel="stylesheet" href="style.css">
-<!-- Chart.js -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 </head>
 <body>
@@ -16,6 +15,12 @@
 </div>
 <div id="startScreen">
   <button id="startBtn">▶ 開始播放</button>
+</div>
+
+<!-- 時間軸 -->
+<div id="timelineWrapper">
+  <input type="range" id="timelineSlider" min="0" max="100" value="0" step="0.01">
+  <div id="timelineLabels"></div>
 </div>
 
 <!-- 下方模擬實驗區 -->
@@ -79,7 +84,6 @@
   </div>
 </div>
 
-<!-- 新增 JS -->
 <script src="script.js"></script>
 </body>
 </html>
