--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <!-- 幻燈片區 -->
 <div id="viewer">
   <img id="slideImg" src="images/Thank_you_page-0001.jpg" alt="幻燈片">
+  <input type="range" id="timelineSlider" min="0" max="100" value="0">
 </div>
 <div id="startScreen">
   <button id="startBtn">▶ 開始播放</button>
