--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <h2 style="color:#00ff88;">模擬實驗：光電板與 LED 電流</h2>
 
-  <!-- 🔬 實驗變因說明（新增） -->
+  <!-- 🔬 實驗變因說明 -->
   <div class="variable-box">
     <h3>🔬 實驗變因設定</h3>
     <ul>
@@ -34,6 +34,11 @@
       <li><strong>操縱變因：</strong>玻璃紙顏色（透光率）</li>
       <li><strong>應變變因：</strong>光學效率（η）</li>
     </ul>
+  </div>
+
+  <!-- 暫停播放按鈕 -->
+  <div class="control-panel">
+    <button id="pauseBtn">⏸ 暫停</button>
   </div>
 
   <!-- 操作區 -->
