--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>光電板模擬實驗</title>
-
 <link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 </head>
@@ -17,6 +16,7 @@
   <input type="range" id="timelineSlider" min="0" max="100" value="0">
 </div>
 
+<!-- 開始與暫停按鈕 -->
 <div id="startScreen">
   <button id="startBtn">▶ 開始播放</button>
   <button id="pauseBtn">⏸ 暫停</button>
